user model completed

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-1. create directory skeleton
-2. create models 
-3. create connection
-4. 
+1. create models 
+    - thought
+        - reaction (subdoc)
+2. create routes
+3. index.js
